# dual

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/basic-mixed/: .gitignore  dual.toml
examples/basic-mixed/scripts/: analysis.R  model.py
scripts/ci/: real-integration.ps1  real-integration.sh
src/: cli.rs  config.rs  doctor.rs  errors.rs  imports.rs  lib.rs  main.rs  metadata.rs  platform.rs  security.rs  tasks.rs  workflows.rs
src/backend/: engine.rs  mod.rs
tests/: cli.rs
