[package]
name = "dual"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "A simple CLI for reproducible projects that use R, Python, or both"
license = "MIT"
readme = "README.md"
keywords = ["reproducibility", "science", "r", "python"]
categories = ["command-line-utilities", "science"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.8"
toml_edit = "0.25"
which = "7.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
